2.0
* Complete redesign
* Integration of different branches:
* Share public keys via qr codes
* Sign keys
* Upload keys to server

1.0.8
* basic key server support (HKP, please report bugs :))
* app2sd (untested, let me know if there are problems)
* more choices for pass phrase cache: 1, 2, 4, 8, hours
* translations: Norwegian (thanks, Sander Danielsen), Chinese (thanks, Zhang Fredrick)
* bugfixes
* optimizations

1.0.7
* clear sign problem with lacking trailing newline fixed
* more options for pass phrase cache time to live (20, 40, 60 mins)

1.0.6
* account adding crash on Froyo fixed
* secure file deletion
* option to delete key file after import
* stream encryption/decryption (gallery, etc.)
* new options (language, force v3 signatures)
* interface changes
* bugfixes

1.0.5
* German and Italian translation
* much smaller package, due to reduced BC sources
* new preferences GUI
* layout adjustment for localization
* signature bugfix

1.0.4
* fixed another crash caused by some SDK bug with query builder

1.0.3
* fixed crashes during encryption/signing and possibly key export

1.0.2
* filterable key lists
* smarter preselection of encryption keys
* new Intent handling for VIEW and SEND, allows files to be encrypted/decrypted out of file managers
* fixes and additional features (key preselection) for k9, new beta build available

1.0.1
* GMail account listing was broken in 1.0.0, fixed again

1.0.0
* k9mail integration, APG supporting beta build of k9mail
* support of more file managers (including ASTRO)
* Slovenian translation
* new database, much faster, less memory usage
* defined Intents and content provider for other apps
* bugfixes

0.9.7
* 0.9.5 must have introduced a bug that prevented symmetric encryption, this release fixes it

0.9.6
* finally fixed that bug that prevents the import of keys exported with Enigmail (and others), since this likely affects many users... it gets its own quick release

0.9.5