@@ -8,13 +8,14 @@ And don't add newlines before or after p tags because of transifex -->
 <h2>2.0</h2>
 <ul>
 <li>Complete redesign</li>
-<li>Integration of different branches:</li>
-<li>Share public keys via qr codes</li>
+<li>Share public keys via qr codes, nfc beam</li>
 <li>Sign keys</li>
 <li>Upload keys to server</li>
+<li>Fixes import issues</li>
+<li>New AIDL API</li>
 </ul>
 
-<h2><h2>1.08</h2>
+<h2>1.08</h2>
 <ul>
 <li>basic key server support</li>
 <li>app2sd (untested, let me know if there are problems)</li>
